--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/Action/restrictTo/ActionRestrictToPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/Action/restrictTo/ActionRestrictToPage-description.adoc
@@ -14,7 +14,7 @@ export PROTOTYPING=true
 ----
 
 
-=== How this demo works
+== How this demo works
 
 This page is a view model that defines three actions, each of which defines a different `restrictTo` element:
 
