--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObjectLayout/paged/DomainObjectLayoutPagedPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObjectLayout/paged/DomainObjectLayoutPagedPage-description.adoc
@@ -7,7 +7,7 @@ NOTE: for parented collections, the `paged` value can be overridden on a case-by
 
 
 
-=== How this demo works
+== How this demo works
 
 The collection on the left hand side shows a set of objects that have been annotated with `paged` of 5.`
 Accordingly, only 5 objects are shown per page.
@@ -24,7 +24,7 @@ include::DomainObjectLayoutPaged.java[tags=class]
 <.> indicates that collections of this domain class should have no more than 5 objects per page.
 p
 
-=== Related configuration property
+== Related configuration property
 
 To set the global default for `paged`, use this configuration property:
 
