--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/Action/executionPublishing/ActionExecutionPublishingPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/Action/executionPublishing/ActionExecutionPublishingPage-description.adoc
@@ -14,7 +14,7 @@ It is designed for integration scenarios, interacting with downstream systems.
 It is of course also possible to register additional subscribers for your own purposes.
 
 
-=== How this demo works
+== How this demo works
 
 The collection on the left hand side shows a list of entities, and three associated actions.
 These actions can be used to change the name of any one of those entities.
@@ -67,7 +67,7 @@ include::ActionExecutionPublishingPage_publishedExecutions.java[tags=class]
 
 
 
-=== Related configuration property
+== Related configuration property
 
 To set the global default for `executionPublishing`, use this configuration property:
 
