--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/associateWith/ActionLayoutAssociateWithPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/actions/ActionLayout/associateWith/ActionLayoutAssociateWithPage-description.adoc
@@ -6,7 +6,7 @@ In such cases, it generally makes sense for the action's button to be close to t
 
 One way to specify this is with the `.layout.xml` files, but another option is to use the link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/ActionLayout.html#associatewith[@ActionLayout#associateWith] element (along with link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/ActionLayout.html#associatewith[@ActionLayout#sequence] if there are several actions associated with the property/collection).
 
-=== How this demo works
+== How this demo works
 
 This page defines a `name` property, and a `children` collection:
 
@@ -38,7 +38,7 @@ which has the additional semantic of the rows of the element being used as choic
 of the same type as the elements of the collection.
 
 
-=== .layout.xml
+== .layout.xml
 
 Instead of using `@ActionLayout#associateWith`, it is also possible to associate actions with objects using the `<action id="..." cssClass="...">` in the link:https://causeway.apache.org/userguide/2.0.0-RC1/fun/ui.html#by-example[.layout.xml] file.
 
