--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/aliased/DomainObjectAliasedPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/aliased/DomainObjectAliasedPage-description.adoc
@@ -14,7 +14,7 @@ For example, suppose an `Customer` type initially is part of the "customer" modu
 Later on, you decide to move `Customer` to a more generic "party" module, with a new logical type name being "party.Customer".
 However, any bookmarks in the old format of "customer.Customer:1234" should still resolve.
 
-=== How this demo works
+== How this demo works
 
 The collection on the left shows a set of entity instances, each indicating their current bookmark and a previous bookmark that corresponds to the value of their link:https://causeway.apache.org/refguide/2.0.0-SNAPSHOT/applib/index/annotation/DomainObject.html#aliased[@DomainObject#alias].
 
