--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/editing/DomainObjectEditingPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/objects/DomainObject/editing/DomainObjectEditingPage-description.adoc
@@ -28,7 +28,7 @@ Alternatively, this works in the opposite direction also: if the global config p
 In addition, the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/DomainObject.html#editingDisabledReason[@DomainObject#editingDisabledReason] can be used to specify the reason why a property cannot be edited.
 This can also be specified at the property level using link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/Property.html#editingDisabledReason[@Property#editingDisabledReason].
 
-=== How this demo works
+== How this demo works
 
 The collection on the left shows a set of entity instances, which use `@DomainObject#editing` to enable editing of their properties.
 However, `@Property#editing` is then used to disable the "originalName" property.
