--- a/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/Property/editing/PropertyEditingPage-description.adoc
+++ b/examples/demo/domain/src/main/java/demoapp/dom/domain/properties/Property/editing/PropertyEditingPage-description.adoc
@@ -1,78 +1,39 @@
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The `editing` element specifies that a property's value can be changed through the UI:
+The state of the application can be changed either by invoking actions on domain objects, or by directly editing their properties.
 
-* for properties, the element can be specified using either the `@Property` annotation, or a meta-annotation
+If the application has complicated business logic, then it's usually preferable to make all changes using actions, with editing globally disabled using a configuration property:
 
-There is no corresponding element for parameters, parameters are implicitly editable.
-
-== Class Level
-
-Usually editing of properties is discouraged; it is usually better to modify state through an explicit action instead.
-For that reason, editing of properties is disabled by default (though that can be changed globally if necessary using the `causeway.applib.annotation.domain-object.editing` configuration property).
-
-Editing can also be specified at the class level.
-This will override any configured defaults, but just for the properties of that class:
-
-[source,java,indent=0]
-.PropertyEditingPage.java
+[source,yaml]
+.application.yml
 ----
-include::PropertyEditingPage.java[tags=class]
+causeway:
+  applib:
+    annotation:
+      domain-object:
+        editing: false    # false | true
 ----
 
-The property-level element can, in turn, overrides the configured or class-level default.
+This demo application is configured in this recommended way, with property editing disabled by default.
+
+The link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/Property.html#editing[@Property#editing] annotation allows this to be overridden for a specific property.
+
+Note that it's also possible to override the default for a specific object, so that all of its properties using link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/DomainObject.html#editing[@DomainObject#editing].
+There are therefore three levels at which property editing can be defined:
+
+    @Property > @DomainObject > global configuration property
+
+Alternatively, this works in the opposite direction also: if the global config property is to _allow_ properties to be edited, then the `@DomainObject#editing` (or `@Property#editing`) could be used to disable editing.
+This would be much less common, though.
+
+In addition, the link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/Property.html#editingDisabledReason[@Property#editingDisabledReason] can be used to specify the reason why a property cannot be edited.
+(This can also be specified at the object level using link:https://causeway.apache.org/refguide/2.0.0-RC1/applib/index/annotation/DomainObject.html#editingDisabledReason[@DomainObject#editingDisabledReason].)
 
 
-== Annotated
+== How this demo works
 
-The `editing` element can be specified explicitly using an annotation:
+The collection on the left shows a set of entity instances, which use `@Property#editing` to enable editing of one of their properties.
+The "initialCharacter" property cannot be edited either, because it is a derived property (has only a getter).
 
-* for properties, using `@Property#editing()`:
-+
-[source,java,indent=0]
-.PropertyEditingPage.java
-----
-include::PropertyEditingPage.java[tags=annotation]
-----
-<.> explicitly specifies that the property is editable
-
-The annotation could also be applied to a mixin, but would have little effect because mixin properties are always read-only.
-
-== Meta-annotated
-
-The `editing` element can also be specified using a custom meta-annotation:
-
-* the meta-annotation is defined as:
-+
-[source,java]
-----
-include::EditingEnabledMetaAnnotation.java[tags=class]
-----
-<.> annotated for a property
-<.> annotation can be applied to a property (either its getter or the field directly)
-
-* and can be applied to a property:
-+
-[source,java,indent=0]
-.PropertyEditingPage.java
-----
-include::PropertyEditingPage.java[tags=meta-annotated]
-----
-<.> semantic is inherited from the meta-annotation
-
-
-
-=== Meta-annotated Overridden
-
-The meta-annotation can itself be overridden:
-
-* in a property:
-+
-[source,java,indent=0]
-.PropertyEditingPage.java
-----
-include::PropertyEditingPage.java[tags=meta-annotated-overridden]
-----
-<.> semantic from meta-annotation ...
-<.> \... is overridden by the `@Property` annotation
+Navigate through to the entity in order to edit its properties, and to see the corresponding source code.
 
